[tool.poetry]
name = "jotbox"
version = "0.1.0"
description = ""
authors = ["Steinthor Palsson <steini90@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.5.1"
pyjwt = "^1.7.1"

[tool.poetry.dev-dependencies]
mypy = "^0.782"
flake8 = "^3.8.3"
black = "^19.10b0"
aredis = "^1.1.8"
mkdocs = "^1.1.2"
mkdocs-material = "^5.4.0"
markdown-include = "^0.5.1"
pygments = "^2.6.1"
pymdown-extensions = "^7.1"
pytest = "^5.4.3"
pytest-asyncio = "^0.14.0"
pytest-cov = "^2.10.0"
asyncmock = "^0.4.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
