[tool.poetry]
name = "jotbox"
version = "0.4.0"
description = "JWTxb library with support for revokable tokens"
authors = ["Steinthor Palsson <steini90@gmail.com>"]
license = "MIT"
readme = "README.md"
classifiers = [
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Security",
  "Intended Audience :: Developers",
  "Environment :: Web Environment"
]

[tool.poetry.urls]
"Issue tracker" = "https://github.com/steinitzu/jotbox/issues"
"Code" = "https://github.com/steinitzu/jotbox"

[tool.poetry.dependencies]
python = "^3.8"
pydantic = ">=1,<3"
pyjwt = "^2"

[tool.poetry.dev-dependencies]
mypy = "^1"
flake8 = "^3.8.3"
black = "^22"
mkdocs = "^1.1.2"
mkdocs-material = "^5.4.0"
markdown-include = "^0.8.1"
pygments = "^2.6.1"
pymdown-extensions = "^7.1"
pytest = "^7"
pytest-asyncio = "^0.19.0"
pytest-cov = "^2.10.0"

[tool.poetry.group.dev.dependencies]
redis = "^5.0.1"
types-redis = "^4.6.0.20240106"

[tool.mypy]
python_version = "3.8"
check_untyped_defs = true

[build-system]
requires = ["poetry.core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
